fixed alignment in form checkboxes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=EB+Garamond&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Parisienne&display=swap');
 
+
+
 * {
     margin: 0;
     padding: 0;
@@ -57,7 +59,7 @@ button {
     width: 10em;
 }
 
-input {
+input[type=text] {
     font-size: 1.1em;
     font-family: inherit;
     border: none;
@@ -66,4 +68,10 @@ input {
     padding: 0.2em 4.5em;
     margin: 1em;
     outline: none;
+}
+
+input[type=checkbox] {
+    height: 15px;
+    margin: -2em;
+    padding: 0;
 }
